# invest-radar

./: README.md  pyproject.toml
notebooks/: NB00 - Stock Data and Targets.ipynb
